--- a/my-workflow/config.staging.json
+++ b/my-workflow/config.staging.json
@@ -1,5 +1,5 @@
 {
-  "geminiModel": "gpt-4o-mini",
+  "gptModel": "gpt-4o-mini",
   "evms": [
     {
       "marketAddress": "0x62d8D11bD63eEDA81715d19332DFC6e50782045c",
