--- a/my-workflow/config.production.json
+++ b/my-workflow/config.production.json
@@ -1,3 +1,10 @@
 {
-  "schedule": "*/30 * * * * *"
+  "gptModel": "gpt-4o-mini",
+  "evms": [
+    {
+      "marketAddress": "0x62d8D11bD63eEDA81715d19332DFC6e50782045c",
+      "chainSelectorName": "ethereum-testnet-sepolia",
+      "gasLimit": "500000"
+    }
+  ]
 }
