add Yellow Settlement in Smart Contract

--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -5,3 +5,6 @@ libs = ["lib"]
 remappings = [
     "@openzeppelin/=lib/openzeppelin-contracts/"
 ]
+fs_permissions = [
+    { access = "read-write", path = "/home/asyam321/Project/RetroPick/RetroPick/.cursor/debug.log" }
+]
