--- a/apps/relayer/package.json
+++ b/apps/relayer/package.json
@@ -1,16 +1,9 @@
 {
-  "name": "relayer",
-  "module": "index.ts",
-  "type": "module",
+  "name": "retropick-relayer",
   "private": true,
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
+  "type": "module",
   "scripts": {
-  "dev": "bun run src/index.ts"
-},
-  "peerDependencies": {
-    "typescript": "^5"
+    "dev": "npx tsx src/index.ts"
   },
   "dependencies": {
     "@erc7824/nitrolite": "^0.5.3",
@@ -18,6 +11,16 @@
     "dotenv": "^17.2.3",
     "fastify": "^5.7.4",
     "viem": "^2.45.1",
-    "ws": "^8.19.0"
+    "ws": "^8.19.0",
+    "zod": "^4.3.6"
+  },
+  "version": "1.0.0",
+  "description": "To install dependencies:",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "tsx": "^4.21.0"
   }
 }
